5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1635_2703.log
== TEST (2019-04-10 13:03:37) 
-- CODE:
var = int(input("idade"))
if (num > 18):
	m = "eleitor"		
else:
	m = "nao_eleitor"
print(m)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (num > 18):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:04:10) 
-- CODE:
var = int(input("idade"))
if (var > 18):
	m = "eleitor"		
else:
	m = "nao_eleitor"
print(m)	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:04:17) 
-- CODE:
var = int(input("idade"))
if (var > 18):
	m = "eleitor"		
else:
	m = "nao_eleitor"
print(m)	
	
-- EXECUTION TIME:
0.202723
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
